fix overflow, dir rec, and actor rec

--- a/website/mysite/static/css/style.css
+++ b/website/mysite/static/css/style.css
@@ -248,6 +248,7 @@
   z-index: 2;
   padding-left: 20px;
   text: white;
+  overflow: hidden;
 }
 
 .sidebar.open ~ .home-section{
